k8s/apps/external/immich/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: immich
  namespace: immich
  labels:
    kubernetes.io/service-name: immich
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 2283
endpoints:
  - addresses:
      - 192.168.2.76
    conditions: { } # https://github.com/argoproj/argo-cd/issues/15554
