k8s/apps/external/immich/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  ports:
    - name: http
      protocol: TCP
      port: 2283
